# telebot

./: .gitignore  CMakeLists.txt  CNAME  Doxyconf  README.md  libtelebot.pc.in  telebot.pc.in
.github/workflows/: telebot.yml
docs/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_j.html  functions_vars_k.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  (+315 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_13.js  (+16 more)
html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__TELEBOT__API.html  group__TELEBOT__CORE__API.html  index.html  modules.html  structtelebot__audio-members.html  structtelebot__audio.html  structtelebot__callback__query-members.html  structtelebot__callback__query.html  structtelebot__chat-members.html  structtelebot__chat.html  structtelebot__contact-members.html  structtelebot__contact.html  structtelebot__core__handler-members.html  structtelebot__core__handler.html  structtelebot__document-members.html  structtelebot__document.html  structtelebot__file-members.html  structtelebot__file.html  structtelebot__keyboard__t-members.html  structtelebot__keyboard__t.html  structtelebot__location-members.html  structtelebot__location.html  structtelebot__message-members.html  structtelebot__message.html  structtelebot__photo-members.html  structtelebot__photo.html  structtelebot__sticker-members.html  structtelebot__sticker.html  (+14 more)
html/html/: index.html
html/search/: all_1.js  all_10.js  all_12.js  all_3.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  files_0.js  functions_0.js  groups_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_a.js  variables_c.js  variables_d.js  variables_e.js  variables_f.js
include/: telebot-api.h  telebot-common.h  telebot-core-api.h  telebot-core-types.h  telebot-core.h  telebot-forums.h  telebot-games.h  telebot-inline.h  telebot-methods.h  telebot-parser.h  telebot-passport.h  telebot-payments.h  telebot-private.h  telebot-stickers.h  telebot-types.h  telebot.h
src/: estgb.c  telebot-api.c  telebot-core-api.c  telebot-core-parser.c  telebot-core.c  telebot-forums.c  telebot-games.c  telebot-inline.c  telebot-parser.c  telebot-passport.c  telebot-payments.c  telebot.c  telebot_core.c
test/: CMakeLists.txt  echobot.c  estgb.c  testbot.c
test/samples/: document.md
