SET(TEST_NAME echobot)
SET(TEST_SRC echobot.c)
ADD_EXECUTABLE(${TEST_NAME} ${TEST_SRC})
TARGET_LINK_LIBRARIES(${TEST_NAME} ${PKGS_LDFLAGS} ${PROJECT_NAME} pthread)

# Build estgb utility
SET(TEST_NAME estgb)
SET(TEST_SRC estgb.c)
ADD_EXECUTABLE(${TEST_NAME} ${TEST_SRC})
TARGET_LINK_LIBRARIES(${TEST_NAME} ${PKGS_LDFLAGS} ${PROJECT_NAME})

#EOF
